<resources>
    <string name="app_name">一刻钟</string>
    <!--主页面-->
    <string name="recommend">推荐</string>
    <string name="crosstalk">段子</string>
    <string name="hot">热门</string>
    <string name="video">视频</string>
    <string name="Focuson">关注</string>
    <string name="nearby">附近</string>


    <string name="action_settings">Settings</string>
    <string name="pulldown_scrollview">PulldownScrollView</string>
    <string name="stretch_scrollview">StretchScrollView</string>
    <string name="add_attention">加关注</string>
    <string name="user_post">职位：产品经理</string>
    <string name="user_book">书单：25本</string>
    <string name="user_name">西北老狼michael</string>
    <string name="user_des">谁能像优乐美一样把我捧在手心，我就能让他的儿子长的更帅女儿长的更漂亮</string>
    <string name="user_recommend_tip">TA推荐的好书</string>
    <!--侧拉-->
    <string name="my_Focuson">我的关注</string>
    <string name="my_collection">我的收藏</string>
    <string name="Search_friends">搜索好友</string>
    <string name="alerts">消息通知</string>
    <string name="night_mode">夜间模式</string>
    <string name="day_mode">日间模式</string>
    <string name="my_works">我的作品</string>
    <string name="Set_up_the">设置</string>
    <!--设置-->
    <string name="set_return">返回</string>
    <string name="Set_up_thes">设置</string>
    <string name="Check_the_update">检查更新</string>
    <string name="feedback">意见反馈</string>
    <string name="about">关于一刻钟</string>
    <string name="Clear">清除缓存</string>
    <string name="Log_out">退出登录</string>
    <!--登陆/注册-->
    <string name="Registered_account">注册账号</string>
    <string name="referrer_account">已有账号</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="login_two">登陆</string>
    <string name="referrer">注册</string>
    <string name="Forgot_password">忘记密码</string>
    <string name="Visitors_login">游客登陆</string>
    <string name="hint_password">请输入手机号</string>
    <string name="hint_account">输入大小写和数字，密码不能超过8位</string>

    <!--创作-->
    <string name="creation">创作</string>
    <string name="call_off">取消</string>
    <string name="creation_video">视频</string>
    <string name="creation_crosstalk">段子</string>

    <!--发表段子-->
    <string name="published">发表</string>
    <string name="published_ta">Ta</string>
    <string name="published_call_off">取消</string>
    <string name="published_woods">发表文章</string>
    <string name="published_hite">请输入内容，禁止内容色情，暴力等违法国家法律的内容，违者将以封号处理！</string>


    <!--成功-->
    <string name="success_return">返回</string>
    <string name="success_woods">发表成功，快分享给好友捧场吧~!</string>
    <string name="success_QQ">QQ好友</string>
    <string name="success_QQs">QQ空间</string>
    <string name="success_friends">朋友圈</string>
    <string name="success_WZ">微信</string>
    <string name="success_Go">快去看看吧！！</string>

    <!--我的关注-->
    <string name="focuson_teturn">返回</string>
    <string name="my_focuson">我的关注</string>
    <string name="hot_focuson">热门关注</string>

    <!--我的消息-->
    <string name="my_alerts">消息</string>
    <string name="Direct_messages">私信</string>
    <string name="my_alerts_notice">消息通知</string>
    <string name="my_alerts_remove">清除消息</string>
    <string name="my_Direct_woods">功能大佬们正在努力研发中，敬请期待...</string>


</resources>
