<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x30"
        android:background="@color/colorbule" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorbule"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/published_call_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/published_call_off"
            android:textColor="@color/colorwhile"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/published_woods"
            android:textColor="@color/colorwhile"
            android:textSize="22sp" />


        <TextView
            android:id="@+id/published"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/published"
            android:textColor="@color/colorwhile"
            android:textSize="20sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/published_woods"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y350"
        android:layout_marginLeft="@dimen/x40"
        android:layout_marginRight="@dimen/y40"
        android:layout_marginTop="@dimen/y40"
        android:background="@null"
        android:gravity="start"
        android:hint="@string/published_hite"
        android:textColorHint="@color/colorhui" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/published_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x40"
        android:layout_marginRight="@dimen/y40"
        android:layout_marginTop="@dimen/y20"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/x40"
        android:layout_marginRight="@dimen/y40"
        android:layout_marginTop="@dimen/y20"
        android:background="@color/colorhui" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x40"
        android:layout_marginRight="@dimen/y40"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/published_ta"
            android:textColorHint="@color/colorback"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="@dimen/x50"
            android:layout_height="@dimen/y50"
            android:layout_margin="10dp"
            android:background="@drawable/raw_1499943790" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/x40"
        android:layout_marginRight="@dimen/y40"
        android:background="@color/colorhui" />
</LinearLayout>