<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorhuiss"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x30"
        android:background="@color/colorbule" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorbule"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/my_focuson_call_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:button="@null"
            android:drawableLeft="@drawable/iv_back"
            android:text="@string/focuson_teturn"
            android:textColor="@color/colorwhile"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/my_focuson"
            android:textColor="@color/colorwhile"
            android:textSize="22sp" />


        <TextView
            android:id="@+id/my_hot_focuson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/hot_focuson"
            android:textColor="@color/colorwhile"
            android:textSize="20sp" />
    </LinearLayout>

    <com.jcodecraeer.xrecyclerview.XRecyclerView
        android:id="@+id/my_focuson_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorwhile"
        android:layout_marginTop="@dimen/y30"
        />


</LinearLayout>