<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mi"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y30"
        android:background="@drawable/mis"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/login_two_image"
            android:layout_width="@dimen/x40"
            android:layout_height="@dimen/y40"
            android:layout_margin="10dp"
            android:background="@drawable/raw_1500019926" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/login_two_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/x40"
            android:text="@string/Registered_account"
            android:textColor="@color/colorhui"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/images"
            android:layout_width="@dimen/x200"
            android:layout_height="@dimen/y200"
            android:layout_marginTop="@dimen/y100"
            android:background="@drawable/logo"/>


        <LinearLayout
            android:layout_marginTop="@dimen/x60"
            android:layout_width="@dimen/x600"
            android:layout_height="@dimen/y200"
            android:background="@drawable/dotlogin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/x40"
                android:layout_marginRight="@dimen/x40"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    android:textColor="@color/colorhui"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/login_two_account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/x20"
                    android:background="@null"
                    android:textColor="@color/colorhui"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/x40"
                android:layout_marginRight="@dimen/x40"
                android:background="@color/colorhui" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/x40"
                android:layout_marginRight="@dimen/x40"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/colorhui"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/login_two_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/x20"
                    android:background="@null"
                    android:inputType="textPassword"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/login_two_login"
            android:layout_width="@dimen/x600"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x60"
            android:background="@drawable/dotlogintwo"
            android:text="@string/login_two"
            android:textColor="@color/colorwhile"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/login_two_Forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Forgot_password"
            android:textColor="@color/colorhui"
            android:textSize="15sp"
            android:layout_marginLeft="@dimen/x240"
            android:layout_marginTop="@dimen/x40"/>
        <TextView
            android:id="@+id/login_two_Visitors_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Visitors_login"
            android:textColor="@color/colorhui"
            android:textSize="15sp"
            android:layout_marginTop="@dimen/x40"/>
    </LinearLayout>


</LinearLayout>