<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorhuis"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y30"
        android:background="@color/colorbule" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorbule"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/set_teturn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/y80"
            android:layout_marginBottom="10dp"
            android:button="@null"
            android:drawableLeft="@drawable/raw_1500019926"
            android:text="@string/set_return"
            android:textColor="@color/colorwhile"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_weight="2.5"
            android:gravity="center"
            android:text="@string/Set_up_thes"
            android:textColor="@color/colorwhile"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorwhile"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/y20"
            android:text="@string/Check_the_update"
            android:textColor="@color/colorhui"
            android:textSize="15sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="0.1.1"
            android:textColor="@color/colorhui"
            android:textSize="15sp"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="@dimen/x60"
            android:layout_height="@dimen/y60"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="@dimen/y20"
            android:layout_marginTop="@dimen/y20"
            android:background="@drawable/returns" />
    </LinearLayout>

    <View
        android:layout_width="@dimen/x200"
        android:layout_height="@dimen/y2"
        android:background="@color/colorwhile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorwhile"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/y20"
            android:text="@string/feedback"
            android:textColor="@color/colorhui"
            android:textSize="15sp" />

        <TextView
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="@dimen/x60"
            android:layout_height="@dimen/y60"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="@dimen/y20"
            android:layout_marginTop="@dimen/y20"
            android:background="@drawable/returns" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorwhile"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/y20"
            android:text="@string/about"
            android:textColor="@color/colorhui"
            android:textSize="15sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="@dimen/x60"
            android:layout_height="@dimen/y60"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="@dimen/y20"
            android:layout_marginTop="@dimen/y20"
            android:background="@drawable/returns" />
    </LinearLayout>

    <View
        android:layout_width="@dimen/x200"
        android:layout_height="@dimen/y2"
        android:background="@color/colorwhile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorwhile"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/y20"
            android:text="@string/Clear"
            android:textColor="@color/colorhui"
            android:textSize="15sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="128M"
            android:textColor="@color/colorhui"
            android:textSize="15sp"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="@dimen/x60"
            android:layout_height="@dimen/y60"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="@dimen/y20"
            android:layout_marginTop="@dimen/y20"
            android:background="@drawable/returns" />
    </LinearLayout>

    <Button
        android:id="@+id/return_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x4"
        android:layout_marginRight="@dimen/x4"
        android:layout_marginTop="@dimen/y40"
        android:background="@drawable/dots"
        android:text="@string/Log_out"
        android:textColor="@color/colorwhile"
        android:textSize="16sp" />
</LinearLayout>