<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mi"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y30"
        android:background="@drawable/mis"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/referrer_image"
            android:layout_width="@dimen/x40"
            android:layout_height="@dimen/y40"
            android:layout_margin="10dp"
            android:background="@drawable/raw_1500019926" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/referrer_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/x40"
            android:text="@string/referrer_account"
            android:textColor="@color/colorhui"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/x200"
            android:layout_height="@dimen/y200"
            android:layout_marginTop="@dimen/y100"
            android:background="@drawable/logo"
            />

        <LinearLayout
            android:layout_marginTop="@dimen/x60"
            android:layout_width="@dimen/x660"
            android:layout_height="@dimen/y200"
            android:background="@drawable/dotlogin"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/x40"
                android:layout_marginRight="@dimen/x40"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/referrer_account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/hint_password"
                    android:textColorHint="@color/colorhui"
                    android:textColor="@color/colorhui"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/x40"
                android:layout_marginRight="@dimen/x40"
                android:background="@color/colorhui" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/x40"
                android:layout_marginRight="@dimen/x40"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/referrer_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/hint_account"
                    android:textColorHint="@color/colorhui"
                    android:inputType="textPassword"
                    />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/referrer_login"
            android:layout_width="@dimen/x600"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x60"
            android:background="@drawable/dotlogintwo"
            android:text="@string/referrer"
            android:textColor="@color/colorwhile"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/referrer_Visitors_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Visitors_login"
            android:textColor="@color/colorhui"
            android:textSize="15sp"
            android:layout_marginTop="@dimen/x40"/>
    </LinearLayout>


</LinearLayout>